# sorting-with-simd

./: Cargo.toml
benches/: my_benchmark.rs
src/: lib.rs  main.rs
